# diy-dollar-index

./: .gitignore  app.py  pyproject.toml  readME.md
notebooks/: 01-data-exploration.ipynb
src/currency_index/: fx_data.py  index_builder.py  returns.py  weights.py
